--- a/website1.html
+++ b/website1.html
@@ -1,11 +1,12 @@
- <button>
-  Click
- </button>
- <br>
-
- <button>simon </button>
- <button>chocolate</button>
- <p>Hello, world</p>
- <p>
-  i went to work today lol
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Css Test</title>
+</head>
+<body>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sapiente, voluptatum vel doloremque tenetur tempore quidem quod, animi dolorum explicabo quasi, repellendus cupiditate illum est. Eos nesciunt distinctio delectus dolorem!</p>
+</body>
+</html>
