--- a/buttons.html
+++ b/buttons.html
@@ -1,7 +1,7 @@
 <style>
   .subscribe-button{
   background-color:rgba(200, 0, 0);  
-   color:white;
+   color:grey;
   border:none;
   height:35px;
   width:105px;
