--- a/buttons.html
+++ b/buttons.html
@@ -48,10 +48,10 @@
    transition: box-shadow 0.15s; 
   
 }
-  /* .tweet-button:hover{
+  .tweet-button:hover{
 
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
-  } */
+  }
 
 
 </style>
